--- a/REPEAT OFICIAL.ipynb
+++ b/REPEAT OFICIAL.ipynb
@@ -1,22 +1,85 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f0d55439",
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "be48a038",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting mysql-connector-python\n",
+      "  Downloading mysql_connector_python-8.2.0-cp310-cp310-manylinux_2_17_x86_64.whl (31.6 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m31.6/31.6 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting protobuf<=4.21.12,>=4.21.1\n",
+      "  Downloading protobuf-4.21.12-cp37-abi3-manylinux2014_x86_64.whl (409 kB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m409.8/409.8 KB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: protobuf, mysql-connector-python\n",
+      "  Attempting uninstall: protobuf\n",
+      "    Found existing installation: protobuf 4.22.1\n",
+      "    Uninstalling protobuf-4.22.1:\n",
+      "      Successfully uninstalled protobuf-4.22.1\n",
+      "Successfully installed mysql-connector-python-8.2.0 protobuf-4.21.12\n"
+     ]
+    }
+   ],
    "source": [
-    "# DATA FRAME ORIGINAL - Project Tweets"
+    "!pip install mysql-connector-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "dd2a711c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTING LIBRARIES\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22553e5a",
+   "metadata": {},
+   "source": [
+    "# MySQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "125052f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def connection():\n",
+    "    conf = configparser.ConfigParser()\n",
+    "    conf.read('conf.ini')\n",
+    "    \n",
+    "    conn = mysql.connector.connect(\n",
+    "        host = conf['mysql']['host'],\n",
+    "        user = conf['mysql']['user'],\n",
+    "        password = confi['mysql']['password'],\n",
+    "        database = conf['mysql']['database']\n",
+    "    )\n",
+    "    return conn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0d55439",
+   "metadata": {},
+   "source": [
+    "# DATA FRAME ORIGINAL - Project Tweets"
    ]
   },
   {
@@ -219,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1968f8d1",
+   "id": "51e6ceb9",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d7fe035",
+   "id": "de0d8eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6a23aab",
+   "id": "9d670cd4",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1d462ec1",
+   "id": "e1bfaeb1",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9220b33c",
+   "id": "018951d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "08c62f62",
+   "id": "e319b8f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e3ff8c4f",
+   "id": "5b63aff8",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "09c03e51",
+   "id": "6126be1c",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cad1b60e",
+   "id": "3ff2633e",
    "metadata": {},
    "outputs": [],
    "source": []
