--- a/REPEAT OFICIAL.ipynb
+++ b/REPEAT OFICIAL.ipynb
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6cd06067",
+   "id": "d594ca18",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "619816e3",
+   "id": "42ae141f",
    "metadata": {
     "scrolled": true
    },
@@ -865,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c0706360",
+   "id": "4ec61f21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1f8222b4",
+   "id": "2fdb30c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c1fa01d7",
+   "id": "783b79b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7bf6de2d",
+   "id": "b43c4850",
    "metadata": {
     "scrolled": true
    },
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3ee688d0",
+   "id": "dc3af190",
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d440807f",
+   "id": "a693e394",
    "metadata": {
     "scrolled": true
    },
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "08d35f04",
+   "id": "46b252b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "c9e55adc",
+   "id": "f121cecb",
    "metadata": {},
    "outputs": [
     {
@@ -1050,32 +1050,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25475dfb",
+   "execution_count": 42,
+   "id": "39e263ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import modules\n",
+    "from pyspark.sql.types import *\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.feature import HashingTF, Tokenizer, StopWordsRemover\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "91a20fa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+---------+---------------+---------------------------------+\n",
+      "|ItemID|Sentiment|SentimentSource|SentimentText                    |\n",
+      "+------+---------+---------------+---------------------------------+\n",
+      "|1038  |1        |Sentiment140   |that film is fantastic #brilliant|\n",
+      "|1804  |1        |Sentiment140   |this music is really bad #myband |\n",
+      "|1693  |0        |Sentiment140   |winter is terrible #thumbs-down  |\n",
+      "+------+---------+---------------+---------------------------------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#read csv file into dataFrame with automatically inferred schema\n",
+    "tweets_csv = spark.read.csv(\"hdfs://localhost:9000/CA4/tweets.csv\", inferSchema=True, header=True)\n",
+    "tweets_csv.show(truncate=False, n=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d8766d16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------+-----+\n",
+      "|SentimentText                    |label|\n",
+      "+---------------------------------+-----+\n",
+      "|that film is fantastic #brilliant|1    |\n",
+      "|this music is really bad #myband |1    |\n",
+      "|winter is terrible #thumbs-down  |0    |\n",
+      "|this game is awful #nightmare    |0    |\n",
+      "|I love jam #loveit               |1    |\n",
+      "+---------------------------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#select only \"SentimentText\" and \"Sentiment\" column, \n",
+    "#and cast \"Sentiment\" column data into integer\n",
+    "data = tweets_csv.select(\"SentimentText\", col(\"Sentiment\").cast(\"Int\").alias(\"label\"))\n",
+    "data.show(truncate = False,n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "83a7bf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data rows: 1371 ; Testing data rows: 561\n"
+     ]
+    }
+   ],
+   "source": [
+    "#divide data, 70% for training, 30% for testing\n",
+    "dividedData = data.randomSplit([0.7, 0.3]) \n",
+    "trainingData = dividedData[0] #index 0 = data training\n",
+    "testingData = dividedData[1] #index 1 = data testing\n",
+    "train_rows = trainingData.count()\n",
+    "test_rows = testingData.count()\n",
+    "print (\"Training data rows:\", train_rows, \"; Testing data rows:\", test_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "da335a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 26:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------+-----+----------------------------------------+\n",
+      "|SentimentText                     |label|SentimentWords                          |\n",
+      "+----------------------------------+-----+----------------------------------------+\n",
+      "|I adore cheese #favorite          |1    |[i, adore, cheese, #favorite]           |\n",
+      "|I adore cheese #thumbs-up         |1    |[i, adore, cheese, #thumbs-up]          |\n",
+      "|I adore cheese #toptastic         |1    |[i, adore, cheese, #toptastic]          |\n",
+      "|I adore classical music #brilliant|1    |[i, adore, classical, music, #brilliant]|\n",
+      "|I adore classical music #favorite |1    |[i, adore, classical, music, #favorite] |\n",
+      "+----------------------------------+-----+----------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = Tokenizer(inputCol=\"SentimentText\", outputCol=\"SentimentWords\")\n",
+    "tokenizedTrain = tokenizer.transform(trainingData)\n",
+    "tokenizedTrain.show(truncate=False, n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a5432c96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------+-----+----------------------------------------+-------------------------------------+\n",
+      "|SentimentText                     |label|SentimentWords                          |MeaningfulWords                      |\n",
+      "+----------------------------------+-----+----------------------------------------+-------------------------------------+\n",
+      "|I adore cheese #favorite          |1    |[i, adore, cheese, #favorite]           |[adore, cheese, #favorite]           |\n",
+      "|I adore cheese #thumbs-up         |1    |[i, adore, cheese, #thumbs-up]          |[adore, cheese, #thumbs-up]          |\n",
+      "|I adore cheese #toptastic         |1    |[i, adore, cheese, #toptastic]          |[adore, cheese, #toptastic]          |\n",
+      "|I adore classical music #brilliant|1    |[i, adore, classical, music, #brilliant]|[adore, classical, music, #brilliant]|\n",
+      "|I adore classical music #favorite |1    |[i, adore, classical, music, #favorite] |[adore, classical, music, #favorite] |\n",
+      "+----------------------------------+-----+----------------------------------------+-------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "swr = StopWordsRemover(inputCol=tokenizer.getOutputCol(), \n",
+    "                       outputCol=\"MeaningfulWords\")\n",
+    "SwRemovedTrain = swr.transform(tokenizedTrain)\n",
+    "SwRemovedTrain.show(truncate=False, n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b709be60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---------------------------+-------------------------------------------+\n",
+      "|label|MeaningfulWords            |features                                   |\n",
+      "+-----+---------------------------+-------------------------------------------+\n",
+      "|1    |[adore, cheese, #favorite] |(262144,[1689,100089,108624],[1.0,1.0,1.0])|\n",
+      "|1    |[adore, cheese, #thumbs-up]|(262144,[1689,88825,100089],[1.0,1.0,1.0]) |\n",
+      "|1    |[adore, cheese, #toptastic]|(262144,[1689,42010,100089],[1.0,1.0,1.0]) |\n",
+      "+-----+---------------------------+-------------------------------------------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "hashTF = HashingTF(inputCol=swr.getOutputCol(), outputCol=\"features\")\n",
+    "numericTrainData = hashTF.transform(SwRemovedTrain).select(\n",
+    "    'label', 'MeaningfulWords', 'features')\n",
+    "numericTrainData.show(truncate=False, n=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "cc1e5392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training is done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression(labelCol=\"label\", featuresCol=\"features\", \n",
+    "                        maxIter=10, regParam=0.01)\n",
+    "model = lr.fit(numericTrainData)\n",
+    "print (\"Training is done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a9da42bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 41:>                                                         (0 + 1) / 1]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---------------------------+------------------------------------------+\n",
+      "|Label|MeaningfulWords            |features                                  |\n",
+      "+-----+---------------------------+------------------------------------------+\n",
+      "|1    |[adore, cheese, #bestever] |(262144,[1689,91011,100089],[1.0,1.0,1.0])|\n",
+      "|1    |[adore, cheese, #brilliant]|(262144,[1689,45361,100089],[1.0,1.0,1.0])|\n",
+      "+-----+---------------------------+------------------------------------------+\n",
+      "only showing top 2 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizedTest = tokenizer.transform(testingData)\n",
+    "SwRemovedTest = swr.transform(tokenizedTest)\n",
+    "numericTest = hashTF.transform(SwRemovedTest).select(\n",
+    "    'Label', 'MeaningfulWords', 'features')\n",
+    "numericTest.show(truncate=False, n=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "996f50c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------+----------+-----+\n",
+      "|MeaningfulWords                     |prediction|Label|\n",
+      "+------------------------------------+----------+-----+\n",
+      "|[adore, cheese, #bestever]          |1.0       |1    |\n",
+      "|[adore, cheese, #brilliant]         |1.0       |1    |\n",
+      "|[adore, cheese, #loveit]            |1.0       |1    |\n",
+      "|[adore, classical, music, #bestever]|1.0       |1    |\n",
+      "+------------------------------------+----------+-----+\n",
+      "only showing top 4 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 46:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct prediction: 551 , total data: 561 , accuracy: 0.982174688057041\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = model.transform(numericTest)\n",
+    "predictionFinal = prediction.select(\n",
+    "    \"MeaningfulWords\", \"prediction\", \"Label\")\n",
+    "predictionFinal.show(n=4, truncate = False)\n",
+    "correctPrediction = predictionFinal.filter(\n",
+    "    predictionFinal['prediction'] == predictionFinal['Label']).count()\n",
+    "totalData = predictionFinal.count()\n",
+    "print(\"correct prediction:\", correctPrediction, \", total data:\", totalData, \n",
+    "      \", accuracy:\", correctPrediction/totalData)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c389859a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a7c8c5b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7278abc",
+   "id": "3560f9f6",
    "metadata": {},
    "outputs": [],
    "source": []
