--- a/Dash_new.ipynb
+++ b/Dash_new.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f49e422",
+   "id": "1b9d0635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0469b747",
+   "id": "9f0371ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,21 +50,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bfcec5ca",
+   "id": "fe36ba70",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/07 02:24:42 WARN Utils: Your hostname, BDS-2023 resolves to a loopback address: 127.0.1.1; using 10.0.2.15 instead (on interface enp0s3)\n",
-      "24/01/07 02:24:42 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/01/07 17:56:02 WARN Utils: Your hostname, BDS-2023 resolves to a loopback address: 127.0.1.1; using 10.0.2.15 instead (on interface enp0s3)\n",
+      "24/01/07 17:56:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/07 02:24:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/01/07 02:25:21 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "24/01/07 02:25:21 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "24/01/07 17:56:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/01/07 17:56:14 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "24/01/07 17:56:14 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6461f244",
+   "id": "3e2bf4f9",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7bfaece1",
+   "id": "5f80dbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "112a2525",
+   "id": "0503c90e",
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a771af8b",
+   "execution_count": 7,
+   "id": "2108bf4e",
    "metadata": {
     "scrolled": true
    },
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d58b256b",
+   "execution_count": 8,
+   "id": "b664c9be",
    "metadata": {},
    "outputs": [
     {
@@ -263,15 +263,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4eb89225",
+   "execution_count": 9,
+   "id": "de30b505",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 10:===================================================>      (8 + 1) / 9]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -307,8 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "60ecb779",
+   "execution_count": 10,
+   "id": "85929a26",
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8c10ef8a",
+   "execution_count": 11,
+   "id": "4df3666d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a60f0dfa",
+   "execution_count": 12,
+   "id": "0947ffe9",
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "119e510d",
+   "execution_count": 13,
+   "id": "a8c5c078",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "9       0         6        50     0.000000     Tuesday 2009-04-07 09:00:00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,8 +647,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d6fa85bb",
+   "execution_count": 14,
+   "id": "e24bb0cb",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "9        26       259     0.334764     Tuesday 2009-04-07 14:00:00  Positive  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,8 +931,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "cfda8c52",
+   "execution_count": 15,
+   "id": "ab5a7236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,8 +941,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "aa312117",
+   "execution_count": 16,
+   "id": "e2e4301d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,8 +962,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d21b2771",
+   "execution_count": 17,
+   "id": "5fca8768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,8 +972,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "bdeec19d",
+   "execution_count": 18,
+   "id": "21ff34c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,8 +1001,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "7deccd6e",
+   "execution_count": 19,
+   "id": "d6564aee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,8 +1034,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "f88fcc55",
+   "execution_count": 20,
+   "id": "e11e82ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,8 +1104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "15e84d42",
+   "execution_count": 21,
+   "id": "017dd4bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,8 +1212,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "3f6787c3",
+   "execution_count": 22,
+   "id": "50ec4bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,22 +1392,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "0167d313",
+   "execution_count": 23,
+   "id": "d50a2d6d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_16557/1726325087.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"__main__\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m     \u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_server\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#mode='inline')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/jupyter_dash/jupyter_app.py\u001b[0m in \u001b[0;36mrun_server\u001b[0;34m(self, mode, width, height, inline_exceptions, **kwargs)\u001b[0m\n\u001b[1;32m    220\u001b[0m         \u001b[0mold_server\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_server_threads\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mold_server\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 222\u001b[0;31m             \u001b[0mold_server\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    223\u001b[0m             \u001b[0mold_server\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_server_threads\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.10/site-packages/jupyter_dash/_stoppable_thread.py\u001b[0m in \u001b[0;36mkill\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mthread_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         res = ctypes.pythonapi.PyThreadState_SetAsyncExc(\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_long\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthread_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpy_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSystemExit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         )\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object cannot be interpreted as an integer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8050/\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fdf43ddf220>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1473,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2097aac9",
+   "id": "f7e1a129",
    "metadata": {},
    "outputs": [],
    "source": []
