--- a/Dash_new.ipynb
+++ b/Dash_new.ipynb
@@ -51,20 +51,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "fe36ba70",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/01/07 17:56:02 WARN Utils: Your hostname, BDS-2023 resolves to a loopback address: 127.0.1.1; using 10.0.2.15 instead (on interface enp0s3)\n",
-      "24/01/07 17:56:02 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/01/07 19:03:27 WARN Utils: Your hostname, BDS-2023 resolves to a loopback address: 127.0.1.1; using 10.0.2.15 instead (on interface enp0s3)\n",
+      "24/01/07 19:03:27 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/01/07 17:56:07 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/01/07 17:56:14 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "24/01/07 17:56:14 WARN Utils: Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+      "24/01/07 19:03:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -140,6 +140,74 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "48dc4b8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 1:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|Tweet                                                                                                                                      |tokens                                                                                                                                                                    |\n",
+      "+-------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "|i hate going shopping when i can't buy anything                                                                                            |[i, hate, going, shopping, when, i, can't, buy, anything]                                                                                                                 |\n",
+      "|@danielstein it's particularly sucky in bay area. Seems counter-intuitive, no? Would hate to see you go back to Sprint  wait for 3.0?      |[@danielstein, it's, particularly, sucky, in, bay, area., seems, counter-intuitive,, no?, would, hate, to, see, you, go, back, to, sprint, , wait, for, 3.0?]             |\n",
+      "|@Kaylee0214 KAYLEE I MISS YOU AND LOVE YOU MORE. when are we going to hang out again?                                                      |[@kaylee0214, kaylee, i, miss, you, and, love, you, more., when, are, we, going, to, hang, out, again?]                                                                   |\n",
+      "|how do u love someoooone? (8)                                                                                                              |[how, do, u, love, someoooone?, (8)]                                                                                                                                      |\n",
+      "|@Ashymon Okay I didn't like when they were mean to Torrie  But I can't help but love Spencer,he's hilarious &amp;they're so entertaining.  |[@ashymon, okay, i, didn't, like, when, they, were, mean, to, torrie, , but, i, can't, help, but, love, spencer,he's, hilarious, &amp;they're, so, entertaining.]         |\n",
+      "|My parent don't love me anymoreee                                                                                                          |[my, parent, don't, love, me, anymoreee]                                                                                                                                  |\n",
+      "|@pollyyy by the way i hate you for seeing brand new in the next three weeks...THREE FREAKIN' TIMES  ..just kidding,i'm just mega jealous!  |[@pollyyy, by, the, way, i, hate, you, for, seeing, brand, new, in, the, next, three, weeks...three, freakin', times, , ..just, kidding,i'm, just, mega, jealous!]        |\n",
+      "|RB TY@threebears: &quot;love songs won... sorry its tube ... couldn't find the recording I wanted  &quot; â« http://blip.fm/~7rljk        |[rb, ty@threebears:, &quot;love, songs, won..., sorry, its, tube, ..., couldn't, find, the, recording, i, wanted, , &quot;, â«, http://blip.fm/~7rljk]                   |\n",
+      "|@ordcaptk I hate to see these reports.   Especially with kids in the service...but it's horrible anyway you look at it.                    |[@ordcaptk, i, hate, to, see, these, reports., , , especially, with, kids, in, the, service...but, it's, horrible, anyway, you, look, at, it.]                            |\n",
+      "|@hellokeena horoscopes hate me this week.                                                                                                  |[@hellokeena, horoscopes, hate, me, this, week.]                                                                                                                          |\n",
+      "|@sophiemcflyx i know  but i look so bad in all the pictures  i would love a group one of them all and me  xx                               |[@sophiemcflyx, i, know, , but, i, look, so, bad, in, all, the, pictures, , i, would, love, a, group, one, of, them, all, and, me, , xx]                                  |\n",
+      "|@whatdayathink yeah I love Nietzsche too. Tried to check out some of his stuff at the library &amp; it was all already checked out         |[@whatdayathink, yeah, i, love, nietzsche, too., tried, to, check, out, some, of, his, stuff, at, the, library, &amp;, it, was, all, already, checked, out]               |\n",
+      "|@squooshfiber probably a 56 or less grade  Hate that!!!                                                                                    |[@squooshfiber, probably, a, 56, or, less, grade, , hate, that!!!]                                                                                                        |\n",
+      "|GRRR I hate it when I woke up to early &amp;cnt go bck 2 sleep  sheesh. Well, since I'm wking up early think I'm gon' 2 wtch some cartoons.|[grrr, i, hate, it, when, i, woke, up, to, early, &amp;cnt, go, bck, 2, sleep, , sheesh., well,, since, i'm, wking, up, early, think, i'm, gon', 2, wtch, some, cartoons.]|\n",
+      "|My sleep patterns are seriously messed up  watching the break-up though. I love jennifer anniston!                                         |[my, sleep, patterns, are, seriously, messed, up, , watching, the, break-up, though., i, love, jennifer, anniston!]                                                       |\n",
+      "|I hate not being able to be there for someone u love but even if I was there I prob couldn't do anything. I feel like a terrible daughter  |[i, hate, not, being, able, to, be, there, for, someone, u, love, but, even, if, i, was, there, i, prob, couldn't, do, anything., i, feel, like, a, terrible, daughter]   |\n",
+      "|Twitter Fam... be very carefully with bleach it gonna turn yo blue clothes light purple  i HATE this shirt now                             |[twitter, fam..., be, very, carefully, with, bleach, it, gonna, turn, yo, blue, clothes, light, purple, , i, hate, this, shirt, now]                                      |\n",
+      "|@thephotogirl I do love and appreciate you. bunches and bunches. I didn't realize you were skipping shows though.  I sowwy. &lt;3          |[@thephotogirl, i, do, love, and, appreciate, you., bunches, and, bunches., i, didn't, realize, you, were, skipping, shows, though., , i, sowwy., &lt;3]                  |\n",
+      "|Gosh dangit I don't!!   Wondering if I ought to add the sports tier to my cable... I would love to have the tennis channel too. Hmmm.      |[gosh, dangit, i, don't!!, , , wondering, if, i, ought, to, add, the, sports, tier, to, my, cable..., i, would, love, to, have, the, tennis, channel, too., hmmm.]        |\n",
+      "|Woah! Thunder storm,gonna hide now...i hate hate HATE them                                                                                 |[woah!, thunder, storm,gonna, hide, now...i, hate, hate, hate, them]                                                                                                      |\n",
+      "+-------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.ml.feature import Tokenizer\n",
+    "from pyspark.sql import SparkSession\n",
+    "# Inicializar o Tokenizer\n",
+    "tokenizer = Tokenizer(inputCol=\"Tweet\", outputCol=\"tokens\")\n",
+    "\n",
+    "# Aplicar a tokenização no DataFrame\n",
+    "tweets_fc_df_tokenized = tokenizer.transform(tweets_fc_df)\n",
+    "\n",
+    "# Exibir o resultado\n",
+    "tweets_fc_df_tokenized.select(\"Tweet\", \"tokens\").show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "2108bf4e",
    "metadata": {
     "scrolled": true
@@ -151,9 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b664c9be",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -207,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 5:==========================>                                (4 + 5) / 9]\r"
      ]
     },
     {
@@ -222,6 +292,14 @@
       "+----+-----+---+----------+----+------------------+-----------+------+\n",
       "only showing top 2 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
@@ -263,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "de30b505",
    "metadata": {},
    "outputs": [
@@ -285,7 +363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 11:=============================================>            (7 + 2) / 9]\r"
      ]
     },
     {
@@ -293,6 +371,14 @@
      "output_type": "stream",
      "text": [
       "Average of 2,047 tweets per day (41 total)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
@@ -307,9 +393,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "85929a26",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -325,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4df3666d",
    "metadata": {},
    "outputs": [],
@@ -353,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0947ffe9",
    "metadata": {},
    "outputs": [
@@ -371,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a8c5c078",
    "metadata": {},
    "outputs": [
@@ -613,7 +701,7 @@
        "9       0         6        50     0.000000     Tuesday 2009-04-07 09:00:00  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e24bb0cb",
    "metadata": {},
    "outputs": [
@@ -896,7 +984,7 @@
        "9        26       259     0.334764     Tuesday 2009-04-07 14:00:00  Positive  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ab5a7236",
    "metadata": {},
    "outputs": [],
@@ -941,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e2e4301d",
    "metadata": {},
    "outputs": [],
@@ -962,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "5fca8768",
    "metadata": {},
    "outputs": [],
@@ -972,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "21ff34c7",
    "metadata": {},
    "outputs": [],
@@ -988,7 +1076,7 @@
     "                html.Div(\n",
     "                    [\n",
     "                        html.P(\"Twitter Analytics for\", className=\"card-title mx-auto\"),\n",
-    "                        html.H1(\"Vaccine\", className=\"text-primary mx-auto\"),\n",
+    "                        html.H1(\"Humans Feelings\", className=\"text-primary mx-auto\"),\n",
     "                    ]\n",
     "                )\n",
     "            ],\n",
@@ -1001,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "d6564aee",
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e11e82ac",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "017dd4bf",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "50ec4bef",
    "metadata": {},
    "outputs": [],
@@ -1392,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "d50a2d6d",
    "metadata": {},
    "outputs": [
@@ -1418,7 +1506,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fdf43ddf220>"
+       "<IPython.lib.display.IFrame at 0x7f6f64e2bfd0>"
       ]
      },
      "metadata": {},
